# medical_rag_multi_agent_framework

./: .gitignore  README.md  huggingface_model_download.py  huggingface_model_download_aria2.py  main.py  pyproject.toml
src/: main.py
src/agents/: evaluator.py  medical_brain.py  patient.py  retriever.py
src/graph/: state.py  workflow.py
src/rag/: ingestion.py  retriever.py
test/: open_json.py
ui/: app.py
