[project]
name = "medical-rag-multi-agent-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.0",
    "dotenv>=0.9.9",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.4.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "openai>=2.20.0",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
